# music-reviews

./: .gitignore  MANIFEST.in  README.md  config.example.cfg  create_review.py  format_review.py  generate_lists.py  setup.cfg  setup.py  template.wiki  template_new.wiki
config/: config.example.cfg  config.template.cfg
music-reviews/: __init__.py  config.py  creation.py
musicreviews/: __init__.py  cli.py  config.py  configuration.py  creation.py  creator.py  exporter.py  formatter.py  generation.py  helpers.py  indexer.py  io.py  reader.py  ui.py  utils.py  wiki_formatter.py  writer.py
musicreviews/formatter/: __init__.py  html.py  markdown.py  utils.py  wiki.py  yaml.py
templates/: config.template.cfg  style.css  template.html  template.md  template_index.html
